<resources>
    <string name="app_name">Find Your Time</string>
    <string name="button_schedule">SCHEDULE</string>
    <string name="button_tasks">TASKS</string>
    <string name="button_add">add</string>
    <string name="button_delete">delete</string>
    <string name="button_pull">pull a task</string>
    <string name="button_view">view</string>
    <string name="button_edit">edit</string>
    <string name="button_apply">apply</string>
    <string name="task_name">Task Name</string>
    <string name="priority">Priority</string>
    <string name="duty">Register as a DUTY:</string>
    <string name="message_hobby">The default for tasks is HOBBY.</string>
    <string name="cancel">cancel</string>
    <string name="register">register</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="date">Choose days</string>
    <string name="weekdays">Monday to Friday</string>
    <string name="weekends">Weekends</string>
    <string name="hour">h</string>
    <string name="minutes">min</string>
    <string name="textDelete">Choose a schedule to delete</string>
    <string name="textDeleteT">Choose a task to delete</string>
    <string name="hour_begin">00</string>
    <string name="minute_begin">00</string>
    <string name="hour_end">07</string>
    <string name="minute_end">30</string>
    <string name="text_settings">Change Notification Period</string>

</resources>
