<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fyt.findyourtime.NewScheduleActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/schedule_name"
        app:layout_constraintBottom_toTopOf="@+id/textHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:text="@string/weekdays"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPickDate" />

    <TextView
        android:id="@+id/textPickDate"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="152dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="42dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHour2" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="58dp"
        android:text="@string/to_date"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toStartOf="@+id/textHour2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/weekends"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/textMin2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="126dp"
        android:text="@string/from_date"
        app:layout_constraintBottom_toTopOf="@+id/textTo"
        app:layout_constraintEnd_toStartOf="@+id/textHour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="49dp"
        android:text="@string/cancel"
        android:onClick="cancelSchedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="50dp"
        android:text="@string/register"
        android:onClick="registerSchedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <EditText
        android:id="@+id/textHour"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/hour_begin"
        app:layout_constraintBottom_toTopOf="@+id/textHour2"
        app:layout_constraintEnd_toStartOf="@+id/viewFromHour"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/textHour2"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/hour_end"
        app:layout_constraintBottom_toTopOf="@+id/textPickDate"
        app:layout_constraintEnd_toStartOf="@+id/viewToHour"
        app:layout_constraintStart_toEndOf="@+id/textTo"
        app:layout_constraintTop_toBottomOf="@+id/textHour" />

    <EditText
        android:id="@+id/textMin"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/minute_begin"
        app:layout_constraintBottom_toTopOf="@+id/textMin2"
        app:layout_constraintEnd_toStartOf="@+id/viewFromMinute"
        app:layout_constraintStart_toEndOf="@+id/viewFromHour"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/textMin2"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/minute_end"
        app:layout_constraintBottom_toTopOf="@+id/textPickDate"
        app:layout_constraintEnd_toStartOf="@+id/viewToMin"
        app:layout_constraintStart_toEndOf="@+id/viewToHour"
        app:layout_constraintTop_toBottomOf="@+id/textMin" />

    <TextView
        android:id="@+id/viewFromHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="43dp"
        android:text="@string/hour"
        app:layout_constraintBottom_toTopOf="@+id/viewToHour"
        app:layout_constraintEnd_toStartOf="@+id/textMin"
        app:layout_constraintStart_toEndOf="@+id/textHour"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/viewFromMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="57dp"
        android:layout_marginTop="126dp"
        android:text="@string/minutes"
        app:layout_constraintBottom_toTopOf="@+id/viewToMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewToHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="59dp"
        android:text="@string/hour"
        app:layout_constraintBottom_toTopOf="@+id/textPickDate"
        app:layout_constraintEnd_toStartOf="@+id/textMin2"
        app:layout_constraintStart_toEndOf="@+id/textHour2"
        app:layout_constraintTop_toBottomOf="@+id/viewFromHour" />

    <TextView
        android:id="@+id/viewToMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:layout_marginEnd="57dp"
        android:layout_marginTop="58dp"
        android:text="@string/minutes"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFromMinute" />

</android.support.constraint.ConstraintLayout>
